--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,218 @@
-.side-nav{
-    background-color: rgb(8, 27, 103);
+.side-nav {
+  background-color: rgb(8, 27, 103);
 }
 
-.nav-link{
-    text-decoration: none;
+.LMS {
+  color: #7830ff;
 }
 
-.register{
-    background-color: rgb(8, 27, 103);
-    height: 100vh;
+.main-btn {
+  background-color: #7830ff;
+  color: white;
 }
 
-.home-img{
-    background-image: url('/LMSFront.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
+.modal-title {
+  color: #955cff;
 }
 
-.modal-bg{
-    background-color: rgb(0, 0, 0, 0.6);
+.main-btn:hover,
+.main-btn:active {
+  background-color: #6828df !important;
+  color: white !important;
 }
+
+.sub-btn {
+  background-color: #5C6B73;
+  color: white;
+}
+
+.sub-btn:hover {
+  border: 1px solid #5C6B73;
+}
+
+.nav-link {
+  text-decoration: none;
+}
+
+.text-decoration-none {
+  color: #6a00ff;
+}
+
+.register,
+.reset {
+  height: 100vh;
+}
+
+.home-img {
+  background-image: url('/LMSFront.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  animation: fadeIn 1s ease-out forwards;
+  opacity: 0;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.home-text {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #332f8e;
+  animation: typing 2s steps(30, end) forwards;
+  white-space: nowrap;
+  overflow: hidden;
+  animation-delay: 1s;
+  animation-fill-mode: both;
+  opacity: 0;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+    opacity: 1;
+  }
+
+  to {
+    width: 25ch;
+    opacity: 1;
+  }
+}
+
+.modal-bg {
+  background-color: rgb(0, 0, 0, 0.6);
+}
+
+.reset-div,
+.register-div {
+  border: 1px solid rgb(241, 241, 241);
+  height: 25rem;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 20px 40px rgb(0, 0, 0, 0.08);
+}
+
+@keyframes modalFadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px) scale(0.95);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+}
+
+.modal-fade-in {
+  animation: modalFadeIn 0.4s ease-out forwards;
+}
+
+.modal-icon {
+  font-size: 45px;
+  color: white;
+  animation: popIn 0.4s ease-out;
+
+}
+
+.modal-icon-box {
+  background-color: #955cff;
+  border-radius: 50%;
+  padding: 1rem;
+  margin: 0.7rem 0;
+}
+
+@keyframes popIn {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+
+  80% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+
+.submit-btn:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+  background-color: #7830ff;
+  color: white;
+}
+
+.spinner {
+  width: 15px;
+  height: 15px;
+  border: 3px solid white;
+  border-top: 3px solid transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.input-group {
+  position: relative;
+}
+
+.input-group input {
+  width: 100%;
+  padding: 14px 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+  background: none;
+}
+
+.input-group label {
+  position: absolute;
+  top: 10px;
+  left: 12px;
+  background-color: #fff;
+  color: #aaa;
+  transition: 0.3s ease;
+  pointer-events: none;
+  padding: 0 4px;
+}
+
+.input-group input:focus+label,
+.input-group input:not(:placeholder-shown)+label {
+  top: -8px;
+  left: 10px;
+  font-size: 12px;
+  color: black;
+}
+
+.pass-icon {
+  position: absolute;
+  top: 20%;
+  right: 15px;
+  color: #6c757d;
+  transform: transelateY(-50%);
+  cursor: pointer;
+  font-size: 1.1rem;
+  user-select: none;
+}
+
